@@ -1,5 +1,15 @@
 2005-02-04  Chris Blumenberg  <cblu@apple.com>
 
+	Fixed: <rdar://problem/3802781> rtf->html pasteboard conversion using xhtml
+
+        Reviewed by kocienda.
+
+        * WebView.subproj/WebHTMLView.m:
+        (+[WebHTMLView _excludedElementsForAttributedStringConversion]): new
+        (-[WebHTMLView _documentFragmentFromPasteboard:allowPlainText:]): call _excludedElementsForAttributedStringConversion
+
+2005-02-04  Chris Blumenberg  <cblu@apple.com>
+
 	Fixed: <rdar://problem/3832973> copy text from PowerPoint, paste into Blot (or presumably Mail) and get a single missing image icon
 
         Reviewed by john.
